--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
     "prettier": "3.5.3",
-    "vite": "^6.2.4",
+    "sass": "^1.89.1",
+    "vite": "^4.5.5",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
