--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 aniso8601==10.0.0
 bcrypt==4.3.0
 blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
@@ -9,6 +11,7 @@ flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
 Flask-PyMongo==3.0.1
 Flask-RESTful==0.3.10
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -16,5 +19,7 @@ PyJWT==2.10.1
 pymongo==4.11.3
 python-dotenv==1.1.0
 pytz==2025.2
+requests==2.32.3
 six==1.17.0
+urllib3==2.4.0
 Werkzeug==3.1.3
