--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -15,7 +15,7 @@
       "@/*": ["./src/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable"],
-    "types": ["vite/client"]
+    "types": ["vite/client", "node"]
   },
   "include": [
     "src/**/*",
