--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,14 +23,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
     "prettier": "3.5.3",
     "sass": "^1.89.1",
-    "vite": "^4.5.5",
+    "@types/node": "^24.0.0",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
