fix: Preparar deploy

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,12 @@
-# ===== CONFIGURACIÓN FRONTEND - DonaCrypto =====
-# Variables de entorno para Vue.js/Vite
+# ===== EJEMPLO DE CONFIGURACIÓN FRONTEND - DonaCrypto =====
+# Copia este archivo como .env y configura tus valores
 
 # ===== API CONFIGURATION =====
-# URL del backend API (cambia según el entorno)
+# Para desarrollo local
 VITE_API_BASE_URL=http://localhost:5000
+
+# Para producción (Render)
+# VITE_API_BASE_URL=https://your-backend.onrender.com
 
 # ===== APPLICATION CONFIGURATION =====
 VITE_APP_NAME=DonaCrypto
