--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode production",
+    "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
