--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -1,13 +1,16 @@
 services:
-  - type: web
+  - type: static
     name: donacrypto-frontend
-    env: static
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: ./frontend/dist
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache
+    routes:
+      - type: rewrite
+        source: /(.*)
+        destination: /index.html
     envVars:
       - key: VITE_API_BASE_URL
         value: https://donacrypto-backend.onrender.com
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
